# nySalaryScanner

./: LICENSE  README.md  example.py  main.py  output.html  parser.py  pyproject.toml  requirements.txt  salaries.csv  westbury_salaries.csv
src/ny_salary_scanner/: parser.py  scraper.py
