[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "ny_salary_scanner"
version = "0.0.1"
authors = [
  { name="Jack Borah", email="borahjack@gmail.com" },
]
description = "A library that synchronously scrapes and downloads salary data from [seethroughny.net](https://seethroughny.net/) in a csv format."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/JackBorah/nySalaryScanner"
Issues = "https://github.com/JackBorah/nySalaryScanner/issues"